@@ -212,6 +212,8 @@ CONFIG_STM32_CONNECTIVITYLINE=y
 #
 # STM32 Peripheral Support
 #
+# CONFIG_STM32_HAVE_USBDEV is not set
+CONFIG_STM32_HAVE_OTGFS=y
 # CONFIG_STM32_ADC1 is not set
 # CONFIG_STM32_ADC2 is not set
 # CONFIG_STM32_ADC3 is not set
@@ -225,6 +227,7 @@ CONFIG_STM32_CONNECTIVITYLINE=y
 CONFIG_STM32_ETHMAC=y
 # CONFIG_STM32_I2C1 is not set
 # CONFIG_STM32_I2C2 is not set
+# CONFIG_STM32_OTGFS is not set
 CONFIG_STM32_PWR=y
 # CONFIG_STM32_SPI1 is not set
 # CONFIG_STM32_SPI2 is not set
@@ -242,7 +245,6 @@ CONFIG_STM32_USART1=y
 # CONFIG_STM32_USART3 is not set
 # CONFIG_STM32_UART4 is not set
 # CONFIG_STM32_UART5 is not set
-# CONFIG_STM32_USB is not set
 # CONFIG_STM32_IWDG is not set
 # CONFIG_STM32_WWDG is not set
 
@@ -538,6 +540,7 @@ CONFIG_NET_MULTIBUFFER=y
 CONFIG_NSOCKET_DESCRIPTORS=10
 CONFIG_NET_NACTIVESOCKETS=16
 CONFIG_NET_SOCKOPTS=y
+# CONFIG_NET_SOLINGER is not set
 CONFIG_NET_BUFSIZE=650
 # CONFIG_NET_TCPURGDATA is not set
 
@@ -560,7 +563,7 @@ CONFIG_NET_TCP_RECVDELAY=0
 CONFIG_NET_UDP=y
 # CONFIG_NET_UDP_CHECKSUMS is not set
 CONFIG_NET_UDP_CONNS=8
-# CONFIG_NET_BROADCAST is not set
+CONFIG_NET_BROADCAST=y
 # CONFIG_NET_RXAVAIL is not set
 CONFIG_NET_ICMP=y
 CONFIG_NET_ICMP_PING=y
@@ -842,7 +845,10 @@ CONFIG_NSH_CODECS_BUFSIZE=128
 # CONFIG_NSH_CMDOPT_HEXDUMP is not set
 CONFIG_NSH_FILEIOSIZE=1024
 CONFIG_NSH_LINELEN=80
+# CONFIG_NSH_DISABLE_SEMICOLON is not set
+# CONFIG_NSH_CMDPARMS is not set
 CONFIG_NSH_MAXARGUMENTS=6
+# CONFIG_NSH_ARGCAT is not set
 CONFIG_NSH_NESTDEPTH=3
 # CONFIG_NSH_DISABLESCRIPT is not set
 # CONFIG_NSH_DISABLEBG is not set
@@ -861,9 +867,11 @@ CONFIG_NSH_TELNETD_CLIENTPRIO=100
 CONFIG_NSH_TELNETD_CLIENTSTACKSIZE=2048
 CONFIG_NSH_IOBUFFER_SIZE=512
 # CONFIG_NSH_TELNET_LOGIN is not set
+# CONFIG_NSH_DHCPC is not set
 CONFIG_NSH_IPADDR=0x0a000002
 CONFIG_NSH_DRIPADDR=0x0a000001
 CONFIG_NSH_NETMASK=0xffffff00
+# CONFIG_NSH_DNS is not set
 CONFIG_NSH_NOMAC=y
 CONFIG_NSH_MAX_ROUNDTRIP=20
 
