@@ -1,7 +1,7 @@
 /****************************************************************************
  * net/net_close.c
  *
- *   Copyright (C) 2007-2013 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007-2014 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -43,22 +43,92 @@
 #include <sys/types.h>
 #include <sys/socket.h>
 #include <stdint.h>
+#include <stdbool.h>
 #include <errno.h>
 #include <debug.h>
 
 #include <arch/irq.h>
 #include <nuttx/net/uip/uip-arch.h>
 
+#ifdef CONFIG_NET_SOLINGER
+#  include <nuttx/clock.h>
+#endif
+
 #include "net_internal.h"
 #include "uip/uip_internal.h"
+
+/****************************************************************************
+ * Pre-processor Definitions
+ ****************************************************************************/
 
 /****************************************************************************
  * Private Types
  ****************************************************************************/
 
+#ifdef CONFIG_NET_TCP
+struct tcp_close_s
+{
+  FAR struct uip_callback_s *cl_cb;     /* Reference to TCP callback instance */
+#ifdef CONFIG_NET_SOLINGER
+  FAR struct socket         *cl_psock;  /* Reference to the TCP socket */
+  sem_t                      cl_sem;    /* Signals disconnect completion */
+  int                        cl_result; /* The result of the close */
+#ifndef CONFIG_DISABLE_CLOCK
+  uint32_t                   cl_start;  /* Time close started (in ticks) */
+#endif
+#endif
+};
+#endif
+
 /****************************************************************************
  * Private Functions
  ****************************************************************************/
+
+/****************************************************************************
+ * Function: close_timeout
+ *
+ * Description:
+ *   Check for a timeout on a lingering close.
+ *
+ * Parameters:
+ *   pstate   send state structure
+ *
+ * Returned Value:
+ *   TRUE:timeout FALSE:no timeout
+ *
+ * Assumptions:
+ *   Running at the interrupt level
+ *
+ ****************************************************************************/
+
+#if defined(CONFIG_NET_TCP) && defined(CONFIG_NET_SOLINGER) && \
+   !defined(CONFIG_DISABLE_CLOCK)
+static inline int close_timeout(FAR struct tcp_close_s *pstate)
+{
+  FAR struct socket *psock = 0;
+
+  /* Make sure that we are performing a lingering close */
+
+  if (pstate)
+    {
+     /* Yes Check for a timeout configured via setsockopts(SO_LINGER).
+      * If none... we well let the send wait forever.
+      */
+
+     psock = pstate->cl_psock;
+     if (psock && psock->s_linger != 0)
+       {
+         /* Check if the configured timeout has elapsed */
+
+         return net_timeo(pstate->cl_start, psock->s_linger);
+       }
+    }
+
+  /* No timeout */
+
+  return FALSE;
+}
+#endif /* CONFIG_NET_SOCKOPTS && CONFIG_NET_SOLINGER && !CONFIG_DISABLE_CLOCK */
 
 /****************************************************************************
  * Function: netclose_interrupt
@@ -82,7 +152,10 @@ static uint16_t netclose_interrupt(FAR struct uip_driver_s *dev,
                                    FAR void *pvconn, FAR void *pvpriv,
                                    uint16_t flags)
 {
-  FAR struct uip_conn *conn = (FAR struct uip_conn*)pvconn;
+#ifdef CONFIG_NET_SOLINGER
+  FAR struct tcp_close_s *pstate = (struct tcp_close_s *)pvpriv;
+#endif
+  FAR struct uip_conn *conn = (FAR struct uip_conn *)pvconn;
 
   DEBUGASSERT(conn != NULL);
 
@@ -93,16 +166,64 @@ static uint16_t netclose_interrupt(FAR struct uip_driver_s *dev,
    * UIP_TIMEDOUT: The remote did not respond, the connection timed out
    */
 
-  if ((flags & (UIP_CLOSE|UIP_ABORT|UIP_TIMEDOUT)) != 0)
+  if ((flags & (UIP_CLOSE | UIP_ABORT | UIP_TIMEDOUT)) != 0)
     {
-      /* Free connection resources */
+      /* The disconnection is complete */
 
-      uip_tcpfree(conn);
+#ifdef CONFIG_NET_SOLINGER
+      /* pstate non-NULL means that we are performing a LINGERing close.*/
 
-      /* Stop further callbacks */
+      if (pstate)
+        {
+          pstate->cl_result = OK;
+          goto end_wait;
+        }
 
-      flags = 0;
+      /* Otherwise, nothing is waiting on the close event and we can perform
+       * the completion actions here.
+       */
+
+      else
+#endif
+        {
+          /* Free connection resources */
+
+          uip_tcpfree(conn);
+
+          /* Stop further callbacks */
+
+          flags = 0;
+        }
     }
+
+#ifdef CONFIG_NET_SOLINGER
+#ifndef CONFIG_DISABLE_CLOCK
+  /* Check for a timeout. */
+
+  else if (pstate && close_timeout(pstate))
+    {
+      /* Yes.. report the timeout */
+
+      nlldbg("CLOSE timeout\n");
+      pstate->cl_result = -ETIMEDOUT;
+      goto end_wait;
+    }
+#endif /* CONFIG_DISABLE_CLOCK */
+
+  /* Check if all outstanding bytes have been ACKed */
+
+  else if (pstate && conn->unacked != 0)
+    {
+      /* No... we are still waiting for ACKs.  Drop any received data, but
+       * do not yet report UIP_CLOSE in the response.
+       */
+
+      dev->d_len = 0;     
+      flags = (flags & ~UIP_NEWDATA);     
+    }
+
+#endif /* CONFIG_NET_SOLINGER */
+
   else
     {
       /* Drop data received in this state and make sure that UIP_CLOSE
@@ -114,6 +235,17 @@ static uint16_t netclose_interrupt(FAR struct uip_driver_s *dev,
     }
 
   return flags;
+
+#ifdef CONFIG_NET_SOLINGER
+end_wait:
+  pstate->cl_cb->flags = 0;
+  pstate->cl_cb->priv  = NULL;
+  pstate->cl_cb->event = NULL;
+  sem_post(&pstate->cl_sem);
+
+  nllvdbg("Resuming\n");
+  return 0;
+#endif
 }
 #endif /* CONFIG_NET_TCP */
 
@@ -135,11 +267,15 @@ static uint16_t netclose_interrupt(FAR struct uip_driver_s *dev,
  ****************************************************************************/
 
 #ifdef CONFIG_NET_TCP
-static inline void netclose_disconnect(FAR struct socket *psock)
+static inline int netclose_disconnect(FAR struct socket *psock)
 {
+  struct tcp_close_s state;
   FAR struct uip_conn *conn;
-  FAR struct uip_callback_s *cb;
   uip_lock_t flags;
+#ifdef CONFIG_NET_SOLINGER
+  bool linger;
+#endif
+  int ret = OK;
 
   /* Interrupts are disabled here to avoid race conditions */
 
@@ -153,16 +289,82 @@ static inline void netclose_disconnect(FAR struct socket *psock)
   /* Check for the case where the host beat us and disconnected first */
 
   if (conn->tcpstateflags == UIP_ESTABLISHED &&
-      (cb = uip_tcpcallbackalloc(conn)) != NULL)
+      (state.cl_cb = uip_tcpcallbackalloc(conn)) != NULL)
     {
       /* Set up to receive TCP data event callbacks */
 
-      cb->flags = UIP_NEWDATA|UIP_POLL|UIP_CLOSE|UIP_ABORT|UIP_TIMEDOUT;
-      cb->event = netclose_interrupt;
+      state.cl_cb->flags = (UIP_NEWDATA | UIP_POLL | UIP_CLOSE | UIP_ABORT | \
+                            UIP_TIMEDOUT);
+      state.cl_cb->event = netclose_interrupt;
 
-      /* Notify the device driver of the availaibilty of TX data */
+#ifdef CONFIG_NET_SOLINGER
+      /* Check for a lingering close */
+
+      linger = _SO_GETOPT(psock->s_options, SO_LINGER);
+
+      /* Has a lingering close been requested */
+
+      if (linger)
+        {
+          /* A non-NULL value of the priv field means that lingering is
+           * enabled.
+           */
+
+          state.cl_cb->priv  = (void*)&state;
+
+          /* Set up for the lingering wait */
+
+          state.cl_psock     = psock;
+          state.cl_result    = -EBUSY;
+          sem_init(&state.cl_sem, 0, 0);
+
+#ifndef CONFIG_DISABLE_CLOCK
+          /* Record the time that we started the wait (in ticks) */
+
+          state.cl_start = clock_systimer();
+#endif
+        }
+      else
+#endif /* CONFIG_NET_SOLINGER */
+
+        {
+          /* We will close immediately. The NULL priv field signals this */
+
+          state.cl_cb->priv  = NULL;
+
+          /* No further references on the connection */
+
+          conn->crefs = 0;
+        }
+
+      /* Notify the device driver of the availability of TX data */
 
       netdev_txnotify(conn->ripaddr);
+
+#ifdef CONFIG_NET_SOLINGER
+      /* Wait only if we are lingering */
+
+      if (linger)
+        {
+          /* Wait for the disconnect event */
+
+          (void)uip_lockedwait(&state.cl_sem);
+
+          /* We are now disconnected */
+
+          sem_destroy(&state.cl_sem);
+          uip_tcpcallbackfree(conn, state.cl_cb);
+
+          /* Free the connection */
+
+          conn->crefs = 0;             /* No more references on the connection */
+          uip_tcpfree(conn);           /* Free uIP resources */
+
+          /* Get the result of the close */
+
+          ret = state.cl_result;
+        }
+#endif /* CONFIG_NET_SOLINGER */
     }
   else
     {
@@ -170,8 +372,9 @@ static inline void netclose_disconnect(FAR struct socket *psock)
     }
 
   uip_unlock(flags);
+  return ret;
 }
-#endif
+#endif /* CONFIG_NET_TCP */
 
 /****************************************************************************
  * Public Functions
@@ -228,9 +431,16 @@ int psock_close(FAR struct socket *psock)
                 {
                   /* Yes... then perform the disconnection now */
 
-                  uip_unlisten(conn);          /* No longer accepting connections */
-                  conn->crefs = 0;             /* No more references on the connection */
-                  netclose_disconnect(psock);  /* Break any current connections */
+                  uip_unlisten(conn);                /* No longer accepting connections */
+                  err = netclose_disconnect(psock);  /* Break any current connections */
+                  if (err < 0)
+                    {
+                      /* This would normally occur only if there is a timeout
+                       * from a lingering close.
+                       */
+
+                      goto errout_with_psock;
+                    }
                 }
               else
                 {
@@ -248,7 +458,7 @@ int psock_close(FAR struct socket *psock)
               struct uip_udp_conn *conn = psock->s_conn;
 
               /* Is this the last reference to the connection structure (there
-               * could be more if the socket was dup'ed.
+               * could be more if the socket was dup'ed).
                */
 
               if (conn->crefs <= 1)
@@ -279,8 +489,13 @@ int psock_close(FAR struct socket *psock)
   sock_release(psock);
   return OK;
 
+#ifdef CONFIG_NET_TCP
+errout_with_psock:
+  sock_release(psock);
+#endif
+
 errout:
-  errno = err;
+  set_errno(err);
   return ERROR;
 }
 
